update view of pairing transaction logs

--- a/view/adminhtml/templates/request/view.phtml
+++ b/view/adminhtml/templates/request/view.phtml
@@ -10,7 +10,7 @@ $invocations = $block->getInvocations();
 <div class="request-view">
     <div class="field-block">
         <label for="method"><b><?=  __("API method"); ?></b></label>
-        <span class="twint-method bg-white"><?= htmlspecialchars($request->getMethod()); ?><span></span>
+        <span class="twint-tag bg-white"><?= htmlspecialchars($request->getMethod()); ?><span></span>
     </div>
 
     <div class="field-block">
