update for feedbacks

--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -43,13 +43,7 @@
         </div>
 
         <div class="container mx-auto mt-4 text-16">
-            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                <div id="twint-guide-app" class="hidden flex flex-col items-center p-4">
-                    <div class="flex justify-center">
-                        <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-twint.svg') ?>" alt="app">
-                    </div>
-                    <div class="text-center mt-4"><?= __("Open your bank's TWINT app on your smartphone.") ?></div>
-                </div>
+            <div id="twint-guides" class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div class="flex flex-col items-center p-4">
                     <div class="flex justify-center">
                         <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-scan.svg') ?>" alt="scan">
@@ -60,7 +54,7 @@
                     <div class="flex justify-center">
                         <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-contact.svg') ?>" alt="contact">
                     </div>
-                    <div class="text-center mt-4"><?= __("Select a shipping address and complete the purchase in the app.") ?></div>
+                    <div class="text-center mt-4"><?= __("Follow the instructions in the app to confirm your order.") ?></div>
                 </div>
             </div>
         </div>
