--- a/view/adminhtml/templates/order/view/tab/twint.phtml
+++ b/view/adminhtml/templates/order/view/tab/twint.phtml
@@ -5,8 +5,5 @@
 ?>
 
 <div class="fieldset-wrapper order-information">
-    <div class="fieldset-wrapper-title">
-       <span class="title"><?php /* @escapeNotVerified */
-           echo __('Custom Information for new tab') ?></span>
-    </div>
+    <div class="fieldset-wrapper-title"></div>
 </div>
