--- a/view/adminhtml/templates/pairing/view.phtml
+++ b/view/adminhtml/templates/pairing/view.phtml
@@ -4,12 +4,12 @@
 use Twint\Magento\Block\Adminhtml\Pairing\View;
 
 if(!$block->isExpress()){
-    echo "<h2>" .__("Refund history") ."</h2>";
+    echo "<h2>" .__("Reversal history") ."</h2>";
     echo $block->getChildHtml('twint.grid.refund_history.container');
 
-    echo "<h2>" .__("Transaction history") ."</h2>";
+    echo "<h2>" .__("Transaction logs") ."</h2>";
     echo $block->getChildHtml('twint.grid.pairing_history.container');
 }else{
-    echo "<h2>" .__("Transaction history") ."</h2>";
+    echo "<h2>" .__("Transaction logs") ."</h2>";
     echo $block->getChildHtml('twint.grid.pairing_express_history.container');
 }
