--- a/view/frontend/web/template/payment/twint.html
+++ b/view/frontend/web/template/payment/twint.html
@@ -30,7 +30,7 @@
                 <button class="action primary" type="submit"
                         data-bind="
                          click: placeOrder,
-                         attr: {title: $t('Place Order')},
+                         attr: {title: $t('Place order')},
                          css: {disabled: !isPlaceOrderActionAllowed()},
                          enable: (getCode() == isChecked())
                          "
