--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -1,16 +1,24 @@
-<?php /** @var Twint\Magento\Block\Frontend\ScanQrModal $block */  ?>
+<?php /** @var Twint\Magento\Block\Frontend\ScanQrModal $block */
 
-<div id="qr-modal-content" style="display: none">
+$m = $block->getIsMobile();
+
+$mdClasses = function ($classes) use ($m){
+    return $m ? '' : $classes;
+}
+
+?>
+
+<div id="qr-modal-content" class="<?= $block->getMobileClass(); ?>" style="display: none">
     <div class="to-pay text-20">
-        <div class="flex flex-col md:flex-row gap-4 bg-gray-100">
+        <div class="flex flex-col gap-4 bg-gray-100 <?= $mdClasses('md:flex-row') ?>" >
             <!-- Left Column -->
-            <div class="default-hidden <?= $block->getMobileClass(); ?> md:flex flex flex-1 order-1 md:order-none bg-white p-4 md:rounded-lg items-center justify-center">
-                <div data-twint-copy-token="" class="default-hidden <?= $block->getMobileClass(); ?> md:flex flex flex-col text-center md:flex-col-reverse ">
-                    <div class="qr-token text-center my-4 md:mt-6">
+            <div class="default-hidden <?= $block->getDisplayClass(); ?>  flex-1 order-1 bg-white p-4 items-center justify-center <?= $mdClasses('md:flex flex md:order-none md:rounded-lg') ?>">
+                <div data-twint-copy-token="" class="default-hidden <?= $block->getDisplayClass(); ?> flex flex-col text-center <?= $mdClasses('md:flex md:flex-col-reverse') ?>">
+                    <div class="qr-token text-center my-4 <?= $mdClasses('md:mt-6') ?>">
                         <input id="qr-token" class="bg-white" type="text" value="" disabled>
                     </div>
 
-                    <div class="md:hidden text-center my-6">
+                    <div class="text-center my-6 <?= $mdClasses('md:hidden ') ?>">
                         <button id="twint-copy"
                                 data-clipboard-action="copy"
                                 data-clipboard-target="#qr-token"
@@ -24,33 +32,33 @@
             </div>
 
             <!-- Right Column -->
-            <div class="flex-1 order-0 md:order-1 flex flex-col gap-1 md:gap-4">
+            <div class="flex-1 order-0 flex flex-col gap-1  <?= $mdClasses('md:order-1 md:gap-4') ?>">
                 <!-- First Div -->
-                <div class="flex flex-1 bg-white p-4 md:rounded-lg items-center justify-center">
+                <div class="flex flex-1 bg-white p-4 items-center justify-center <?= $mdClasses('md:rounded-lg') ?>">
                 <span id="twint-amount" class=" text-35 inline-block p-4 px-6 text-white bg-black font-semibold">
                     CHF 12.00
                 </span>
                 </div>
                 <!-- Second Div -->
-                <div class="flex flex-1 bg-white p-4 md:rounded-lg items-center justify-center">
+                <div class="flex flex-1 bg-white p-4 items-center justify-center <?= $mdClasses('md:rounded-lg') ?>">
                     <?= $block->getStoreName(); ?>
                 </div>
 
-                <div class="app-selector md:hidden">
+                <div class="app-selector <?= $mdClasses('md:hidden') ?>">
                     <?= $block->getLinks(); ?>
                 </div>
             </div>
         </div>
 
         <div class="container mx-auto mt-4 text-16">
-            <div id="twint-guides" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <div class="hidden md:flex md:flex-col items-center p-4">
+            <div id="twint-guides" class="grid grid-cols-1 gap-4 <?= $mdClasses('md:grid-cols-2') ?>">
+                <div class="hidden items-center p-4 <?= $mdClasses('md:flex md:flex-col') ?>">
                     <div class="flex justify-center">
                         <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-scan.svg') ?>" alt="scan">
                     </div>
                     <div class="text-center mt-4"><?= __("Scan this QR Code with your TWINT app to complete the checkout.") ?></div>
                 </div>
-                <div id="twint-guide-contact" class="hidden flex flex-col items-center p-4">
+                <div id="twint-guide-contact" class="flex flex-col items-center p-4">
                     <div class="flex justify-center">
                         <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-contact.svg') ?>" alt="contact">
                     </div>
