--- a/view/frontend/web/css/source/modal.scss
+++ b/view/frontend/web/css/source/modal.scss
@@ -81,3 +81,50 @@
     text-align-last: center;
   }
 }
+
+.twint-mobile{
+  #qrcode{
+    display: none;
+  }
+}
+
+.twint-modal:has(.twint-mobile){
+  width: 100%;
+  height: 100%;
+  margin: 0 !important;
+  max-height: 100% !important;
+  overflow-y: scroll !important;
+
+  .twint-logo{
+    display: none;
+  }
+
+  #twint-close > span{
+    order: 9999;
+    margin-left: 1em;
+  }
+}
+
+.twint-mobile{
+  @media (orientation: landscape) {
+    display: flex;
+    justify-content: center;
+
+    & > * {
+      width: 50%;
+      max-width: 100vh;
+    }
+  }
+
+  .md\:flex-row{
+    flex-direction: column;
+  }
+
+  .md\:order-1{
+    order:unset;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
