--- a/view/frontend/web/template/modal/qr-modal-popup.html
+++ b/view/frontend/web/template/modal/qr-modal-popup.html
@@ -8,7 +8,7 @@
        data-type="<%- data.type %>"
        tabindex="0">
     <div data-role="focusable-start" tabindex="0"></div>
-    <div class="modal-inner-wrap twint"
+    <div class="modal-inner-wrap twint twint-modal"
          data-role="focusable-scope">
         <header class="twint-modal-header sticky top-0 flex justify-between items-center bg-white">
             <img class="twint-logo hidden md:block ml-4" src="<%= data.twintLogo %>" alt="TWINT Logo">
@@ -16,7 +16,7 @@
                     data-role="closeBtn"
                     type="button">
                 <span class="order-last sm:order-first"><%= data.closeText %></span>
-                <svg class="mr-2 md:mr-0 md:ml-2" width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="mr-3 md:mr-0 md:ml-3" width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1.40001 12.8078L0.692261 12.1L6.29226 6.50001L0.692261 0.900011L1.40001 0.192261L7.00001 5.79226L12.6 0.192261L13.3078 0.900011L7.70776 6.50001L13.3078 12.1L12.6 12.8078L7.00001 7.20776L1.40001 12.8078Z" fill="#1C1B1F"/>
                 </svg>
             </button>
