--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -4,7 +4,7 @@
     </head>
     <body>
         <referenceContainer name="main">
-            <block class="Twint\Magento\Block\Frontend\ScanQrModal" name="twint-qr-modal" template="qr.phtml" />
+            <block class="Twint\Magento\Block\Frontend\ScanQrModal" name="twint-qr-modal" template="qr.phtml" cacheable="false" />
         </referenceContainer>
     </body>
 </page>
