update styling for button in the product details page

--- a/view/frontend/templates/express/button.phtml
+++ b/view/frontend/templates/express/button.phtml
@@ -2,7 +2,7 @@
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
 
-<button type="submit" disabled class="twint-button express my-2">
+<button type="submit" disabled class="twint-button express pdp">
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
