--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -77,6 +77,10 @@ $mdClasses = function ($classes) use ($m){
             <?= __("We'll email you an order confirmation with details and tracking info."); ?>
         </p>
     </div>
+
+    <div class="on-failed p-6">
+        <?= __("Payment did not succeed, please try another payment method.") ?>
+    </div>
 </div>
 
 <div id="twint-loading">
