--- a/view/frontend/web/template/modal/qr-modal-popup.html
+++ b/view/frontend/web/template/modal/qr-modal-popup.html
@@ -21,10 +21,7 @@
                 </svg>
             </button>
         </header>
-        <div id="modal-content-<%- data.id %>"
-            class="twint-modal-content p-0 md:p-4"
-            data-role="content">
-        </div>
+        <div id="twint-body-content" class="twint-modal-content p-0 md:p-4" data-role="content"></div>
     </div>
     <div data-role="focusable-end" tabindex="0"></div>
 </aside>
