fix: santize strings before call TWINT API. Use more forcing on styling of modal and button

--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -4,7 +4,7 @@
     </head>
     <body>
         <referenceContainer name="main">
-            <block class="Twint\Magento\Block\Frontend\Loading" name="twint-loading" template="loading.phtml"/>
+            <block class="Twint\Magento\Block\Frontend\Loading" name="tw-loading" template="loading.phtml"/>
         </referenceContainer>
     </body>
 </page>
