--- a/view/frontend/templates/express/button-minicart.phtml
+++ b/view/frontend/templates/express/button-minicart.phtml
@@ -2,10 +2,10 @@
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
 
-<button disabled class="twint-button express cart mini mt-4"
+<button disabled class="tw-button express cart mini mt-4"
         data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
-    <span class="icon-block">
-        <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
+    <span class="tw-icon-block">
+        <img class="tw-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
-    <span class="twint-label"><?php echo __("Express Checkout"); ?></span>
+    <span class="tw-label"><?php echo __("Express Checkout"); ?></span>
 </button>
