--- a/view/frontend/templates/loading.phtml
+++ b/view/frontend/templates/loading.phtml
@@ -1,4 +1,4 @@
-<div id="twint-loading">
+<div id="tw-loading">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
         <g transform="matrix(.72509 0 0-.72509 12.626655 199.33733)">
             <path d="M125.9,268.725c0,0,105.6-61,105.6-61c3-1.7,5.4-5.9,5.4-9.4c0,0,0-122,0-122c0-3.4-2.4-7.7-5.4-9.4c0,0-105.6-61-105.6-61-3-1.7-7.9-1.7-10.9,0c0,0-105.6,61-105.6,61-3,1.7-5.4,6-5.4,9.4c0,0,0,122,0,122c0,3.4,2.4,7.7,5.4,9.4c0,0,105.6,61,105.6,61c3,1.7,7.9,1.7,10.9,0Z"
