--- a/view/frontend/web/template/modal/qr-modal-popup.html
+++ b/view/frontend/web/template/modal/qr-modal-popup.html
@@ -8,11 +8,11 @@
        data-type="<%- data.type %>"
        tabindex="0">
     <div data-role="focusable-start" tabindex="0"></div>
-    <div class="modal-inner-wrap twint twint-modal"
+    <div class="modal-inner-wrap twint tw-modal"
          data-role="focusable-scope">
         <header class="twint-modal-header sticky top-0 flex justify-between items-center bg-white">
-            <img class="twint-logo hidden md:block ml-4" src="<%= data.twintLogo %>" alt="TWINT Logo">
-            <button id="twint-close" class="flex items-center justify-between sm:justify-start"
+            <img class="tw-logo hidden md:block ml-4" src="<%= data.twintLogo %>" alt="TWINT Logo">
+            <button id="tw-close" class="flex items-center justify-between sm:justify-start"
                     data-role="closeBtn"
                     type="button">
                 <span class="order-last sm:order-first"><%= data.closeText %></span>
