--- a/view/frontend/templates/express/button-cart.phtml
+++ b/view/frontend/templates/express/button-cart.phtml
@@ -2,9 +2,9 @@
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
 
-<button disabled class="twint-button express" data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
-    <span class="icon-block">
-        <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
+<button disabled class="tw-button express" data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
+    <span class="tw-icon-block">
+        <img class="tw-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
-    <span class="twint-label"><?php echo __("Express Checkout"); ?></span>
+    <span class="tw-label"><?php echo __("Express Checkout"); ?></span>
 </button>
