--- a/view/frontend/templates/express/button-in-box.phtml
+++ b/view/frontend/templates/express/button-in-box.phtml
@@ -1,9 +1,9 @@
 <?php /** @var Button $block */
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
-<button disabled class="twint-button express box">
-    <span class="icon-block">
-        <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
+<button disabled class="tw-button express box">
+    <span class="tw-icon-block">
+        <img class="tw-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
-    <span class="twint-label"><?php echo __("Express Checkout"); ?></span>
+    <span class="tw-label"><?php echo __("Express Checkout"); ?></span>
 </button>
