--- a/view/frontend/templates/express/button.phtml
+++ b/view/frontend/templates/express/button.phtml
@@ -2,9 +2,9 @@
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
 
-<button type="submit" disabled class="twint-button express pdp">
-    <span class="icon-block">
-        <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
+<button type="submit" disabled class="tw-button express pdp">
+    <span class="tw-icon-block">
+        <img class="tw-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
-    <span class="twint-label"><?php echo __("Express Checkout"); ?></span>
+    <span class="tw-label"><?php echo __("Express Checkout"); ?></span>
 </button>
