--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -13,13 +13,13 @@ $mdClasses = function ($classes) use ($m){
         <div class="flex flex-col gap-4 bg-gray-100 <?= $mdClasses('md:flex-row') ?>" >
             <!-- Left Column -->
             <div class="default-hidden <?= $block->getDisplayClass(); ?>  flex-1 order-1 bg-white p-4 items-center justify-center <?= $mdClasses('md:flex flex md:order-none md:rounded-lg') ?>">
-                <div data-twint-copy-token="" class="default-hidden <?= $block->getDisplayClass(); ?> flex flex-col text-center <?= $mdClasses('md:flex md:flex-col-reverse') ?>">
+                <div data-tw-copy-token="" class="default-hidden <?= $block->getDisplayClass(); ?> flex flex-col text-center <?= $mdClasses('md:flex md:flex-col-reverse') ?>">
                     <div class="qr-token text-center my-4 <?= $mdClasses('md:mt-6') ?>">
                         <input id="qr-token" class="bg-white" type="text" value="" disabled>
                     </div>
 
                     <div class="text-center my-6 <?= $mdClasses('md:hidden ') ?>">
-                        <button id="twint-copy"
+                        <button id="tw-copy"
                                 data-clipboard-action="copy"
                                 data-clipboard-target="#qr-token"
                                 class="p-4 px-6 !bg-white rounded-lg border-black hover:shadow-none hover:border-inherit hover:text-inherit"
